#3 fixed not visible text in input

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -55,7 +55,7 @@
     border: none;
     padding-left: 10px;
     background: #fff1;
-    color: #fff;
+    color: #111;
     border-radius: 6px;
     padding: 8px 10px;
 }
